--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
                 </h1>
             </div>
         </div>
+        <footer>
+            <h1>
+                Juan Madeira e Miguel Martins<br>
+                Turma 4C
+            </h1>
+        </footer>
     </body>
 </html>
