--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Human body</title>
+        <title><Human body/></title>
         <script src="script/script.js" defer></script>
         <link rel="stylesheet" href="style/style.css">
     </head>
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div id="content">
-                <h1>
+                <h1 class="center">
                     Bem vindo, veja em detalhe as partes do corpo humano!
                 </h1>
             </div>
